fix for modal scrollbar.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -566,6 +566,10 @@ img.preview {
 	bottom: 3.7em;
 }
 
+#galleryViewContents .ps__rail-y {
+	background-color: transparent !important;
+}
+
 #collection .gallery, .gallery-contents {
     margin-top:.25em;
     background-color: #303030; /* #383838; */
